--- a/source/scss/3-modules/header.scss
+++ b/source/scss/3-modules/header.scss
@@ -111,19 +111,21 @@ header {
 		height: 340px;
 		background-color: #00d49f;
 	}
-	h1 {
-		font-size: 1.5em;
-		text-align: center;
-	}
-
-	h2 {
-		font-size: 1.7em;
-		text-align: center;
-	}
-
-	h3 {
-		font-size: 1.2em;
-		text-align: center;
+	.headers {
+		h1 {
+			font-size: 1.5em;
+			text-align: center;
+		}
+	
+		h2 {
+			font-size: 1.6em;
+			text-align: center;
+		}
+	
+		h3 {
+			font-size: 1.2em;
+			text-align: center;
+		}
 	}
    .profPhoto {
 	   	display: block;
@@ -132,5 +134,21 @@ header {
 		padding: 0;
 		height: auto;
 		width: 200px;
+	}
+}
+
+
+/* 310px breakpoint*/
+@media only screen and (max-width: 310px) {
+	
+	.headers {
+		h2 {
+			font-size: 1.3em;
+			text-align: center;
+		}
+		h3 {
+			font-size: 1.1em;
+			text-align: center;
+		}
 	}
 }
